# rorscha_server

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/handlers/: auth_handler.rs
src/routes/: auth.rs
src/utils/: firebase.rs
