[package]
name = "rorscha_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"    # .env 읽기용
reqwest = { version = "0.11", features = ["json"] } # Google token 검증용
jsonwebtoken = "8"  # JWT검증용